// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterContainer renders checkbox filter container 1`] = `
<grid__Container
  mx="auto"
>
  <Row
    flexWrap={null}
    ml={null}
    mr={null}
    mx={null}
  >
    <Column
      pb={null}
      pl={null}
      pr={null}
      pt={null}
      px={null}
      py={
        Array [
          20,
          20,
          40,
        ]
      }
      width={1}
    >
      <styles__FilterContainerWrapper>
        <FilterLabel
          filterColor="#FFD95E"
          filterName="foo"
          filterType="checkbox"
          handleSelect={[Function]}
          isSelected={true}
          key="foo"
        />
        <FilterLabel
          filterColor="#FF5B44"
          filterName="bar"
          filterType="checkbox"
          handleSelect={[Function]}
          isSelected={false}
          key="bar"
        />
        <FilterLabel
          filterColor="#ED2C6E"
          filterName="baz"
          filterType="checkbox"
          handleSelect={[Function]}
          isSelected={true}
          key="baz"
        />
      </styles__FilterContainerWrapper>
    </Column>
  </Row>
</grid__Container>
`;

exports[`FilterContainer renders radio filter container 1`] = `
<grid__Container
  mx="auto"
>
  <Row
    flexWrap={null}
    ml={null}
    mr={null}
    mx={null}
  >
    <Column
      pb={null}
      pl={null}
      pr={null}
      pt={null}
      px={null}
      py={
        Array [
          20,
          20,
          40,
        ]
      }
      width={1}
    >
      <styles__FilterContainerWrapper>
        <FilterLabel
          filterColor="#FFD95E"
          filterName="foo"
          filterType="radio"
          handleSelect={[Function]}
          isSelected={false}
          key="foo"
        />
        <FilterLabel
          filterColor="#FF5B44"
          filterName="bar"
          filterType="radio"
          handleSelect={[Function]}
          isSelected={true}
          key="bar"
        />
        <FilterLabel
          filterColor="#ED2C6E"
          filterName="baz"
          filterType="radio"
          handleSelect={[Function]}
          isSelected={false}
          key="baz"
        />
      </styles__FilterContainerWrapper>
    </Column>
  </Row>
</grid__Container>
`;
